@@ -13,6 +13,7 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -27,6 +28,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.web.PageableHandlerMethodArgumentResolver;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.ResultActions;
@@ -58,7 +60,10 @@ public class AccountControllerTest {
     @BeforeEach
     void setup() {
         controller = new AccountController(service);
-        mvc = MockMvcBuilders.standaloneSetup(controller).setControllerAdvice(new GlobalExceptionHandler()).build();
+        mvc = MockMvcBuilders
+                .standaloneSetup(controller)
+                .setCustomArgumentResolvers(new PageableHandlerMethodArgumentResolver())
+                .setControllerAdvice(new GlobalExceptionHandler()).build();
     }
 
     @Test
@@ -273,13 +278,13 @@ public class AccountControllerTest {
     	account2.setTransactionCharge(0.0);
     	
     	Pageable page = PageRequest.of(0, 2);
-    	Page<AccountResponse> pageResp = new PageImpl<>(List.of(account1, account2));
+    	Page<AccountResponse> pageResp = new PageImpl<>(Arrays.asList(account1, account2));
     	
 		when(service.getAllAccounts(page)).thenReturn(pageResp);
 
-		mvc.perform(get("/accounts?page=0&size=2").contentType(MediaType.APPLICATION_JSON))
+        mvc.perform(get("/accounts?page=0&size=2").contentType(MediaType.APPLICATION_JSON))
 				.andExpect(MockMvcResultMatchers.jsonPath("$.size").value(2))
-				.andExpect(MockMvcResultMatchers.jsonPath("$.page").value(0))
+				.andExpect(MockMvcResultMatchers.jsonPath("$.number").value(0))
 				.andExpect(MockMvcResultMatchers.jsonPath("$.numberOfElements").value(2));
 		
 	}
